--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -21,7 +21,7 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run: poetry install --no-dev
+        run: poetry install --no-interaction
 
       - name: Run ruff
         run: ruff check snappylapy
