--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -3,28 +3,51 @@ name: Continuous Integration
 on: [push, pull_request]
 
 jobs:
-  lint_and_type_check:
-    runs-on: ubuntu-latest
+    lint_and_type_check:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+        steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+            python-version: "3.9"
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+        - name: Install Poetry
+          run: |
+            curl -sSL https://install.python-poetry.org | python3 -
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Install dependencies
-        run: poetry install --no-interaction
+        - name: Install dependencies
+          run: poetry install --no-interaction
 
-      - name: Run ruff
-        run: poetry run ruff check snappylapy
+        - name: Run ruff
+          run: poetry run ruff check snappylapy
 
-      - name: Run mypy
-        run: poetry run mypy snappylapy
+        - name: Run mypy
+          run: poetry run mypy snappylapy
+
+    test:
+        runs-on: ubuntu-latest
+
+        steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+            python-version: "3.9"
+
+        - name: Install Poetry
+          run: |
+            curl -sSL https://install.python-poetry.org | python3 -
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+        - name: Install dependencies
+          run: poetry install --no-interaction
+
+        - name: Run tests
+          run: poetry run pytest tests/
