--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -2,6 +2,9 @@ name: Continuous Integration
 
 on: [push, pull_request]
 
+env:
+  POETRY_VERSION: 2.0.0
+
 jobs:
     lint_and_type_check:
         runs-on: ubuntu-latest
@@ -17,7 +20,7 @@ jobs:
 
         - name: Install Poetry
           run: |
-            curl -sSL https://install.python-poetry.org | python3 -
+            curl -sSL https://install.python-poetry.org | python3 - --version ${{ env.POETRY_VERSION }}
             echo "$HOME/.local/bin" >> $GITHUB_PATH
 
         - name: Install dependencies
@@ -43,7 +46,7 @@ jobs:
 
         - name: Install Poetry
           run: |
-            curl -sSL https://install.python-poetry.org | python3 -
+            curl -sSL https://install.python-poetry.org | python3 - --version ${{ env.POETRY_VERSION }}
             echo "$HOME/.local/bin" >> $GITHUB_PATH
 
         - name: Install dependencies
