--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ keywords = ["pytest", "snapshot", "testing", "snapshot-testing"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "*"
+jsonpickle = "*"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
