--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -35,6 +35,10 @@ jobs:
     test:
         runs-on: ubuntu-latest
 
+        strategy:
+          matrix:
+            python-version: [3.9, 3.13]
+
         steps:
         - name: Checkout repository
           uses: actions/checkout@v2
@@ -42,7 +46,7 @@ jobs:
         - name: Set up Python
           uses: actions/setup-python@v2
           with:
-            python-version: "3.9"
+            python-version: ${{ matrix.python-version }}
 
         - name: Install Poetry
           run: |
