--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -1,6 +1,11 @@
 name: Continuous Integration
 
-on: [push, pull_request]
+on:
+  push:
+    tags-ignore: ['*']
+  pull_request:
+    branches:
+      - main
 
 env:
   POETRY_VERSION: 2.0.0
