Make the CI to run on every push again

--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -3,6 +3,8 @@ name: Continuous Integration
 on:
   push:
     tags-ignore: ['*']
+    branches:
+      - '**'
   pull_request:
     branches:
       - main
