--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,12 @@ ruff = "^0.3.4"
 types-pyyaml = "^6.0.12.20240311"
 toml = "^0.10.2"
 pytest-cov = "^6.0.0"
+mkdocstrings = {extras = ["python"], version = "^0.27.0"}
+mkdoc = "^0.1"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-material = "^9.5.49"
+mkdocs-literate-nav = "^0.6.1"
+mkdocs-section-index = "^0.3.9"
 
 [build-system]
 requires = ["poetry-core"]
