--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -1,10 +1,13 @@
 name: Generate documentation and deploy to GitHub pages
 on:
-  # Documentation can be either manually updated or is automatically updated when pushed to main branch
+  # Documentation can be either manually updated or is automatically updated when a new release is created
   workflow_dispatch:
   push:
-    branches:
-      - main
+    tags:
+    - "[0-9]+\\.[0-9]+\\.[0-9]+"
+    - "[0-9]+\\.[0-9]+\\.[0-9]+a[0-9]+"
+    - "[0-9]+\\.[0-9]+\\.[0-9]+b[0-9]+"
+    - "[0-9]+\\.[0-9]+\\.[0-9]+rc[0-9]+"
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
