Rename fix issue introduced with wrong home page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,6 @@ markdown_extensions:
   - pymdownx.superfences
 
 nav:
-  - Home: home.md
+  - Home: index.md
   - Code Reference: reference/
   - Change Log: changelog.md
