--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -3,11 +3,11 @@ on:
   # Documentation can be either manually updated or is automatically updated when a new release is created
   workflow_dispatch:
   push:
-    tags:
-    - "[0-9]+\\.[0-9]+\\.[0-9]+"
-    - "[0-9]+\\.[0-9]+\\.[0-9]+a[0-9]+"
-    - "[0-9]+\\.[0-9]+\\.[0-9]+b[0-9]+"
-    - "[0-9]+\\.[0-9]+\\.[0-9]+rc[0-9]+"
+    branches:
+      - main
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
