--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ keywords = ["pytest", "snapshot", "testing", "snapshot-testing", "integration-te
 python = "^3.9"
 pytest = ">=7.0"
 jsonpickle = ">=1.0"
+typer = "*"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
