--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -5,9 +5,13 @@ on:
     tags-ignore: ['*']
     branches:
       - '**'
+    paths-ignore:
+      - '**/*.md'
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - '**/*.md'
 
 env:
   POETRY_VERSION: 2.0.0
