--- a/ruff.toml
+++ b/ruff.toml
@@ -9,7 +9,9 @@ output-format = "concise"
 [lint]
 preview = true
 select = ["ALL"]
-ignore = ["CPY001", "PLR6301", "D212", "D203", "TC001", "S101", "DOC201","RET504", "DOC501","FBT001", "FBT003"]
+ignore = ["CPY001", "PLR6301", "D212", "D203", "TC001", "S101", "DOC201","RET504", "DOC501","FBT001", "FBT003","TD002","TD003","FIX002","ERA001"]
+
+# TODO: Remove ERA001 (Found "Found commented-out code") ignore
 
 [lint.isort]
 no-sections = true
