--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -9,6 +9,9 @@ on:
       - "[0-9]+\\.[0-9]+\\.[0-9]+b[0-9]+"
       - "[0-9]+\\.[0-9]+\\.[0-9]+rc[0-9]+"
 
+env:
+  UV_VERSION: 0.7.7
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -43,19 +46,16 @@ jobs:
         with:
           python-version: '3.9'
 
-      # Install dependencies using Poetry
-      - uses: Gr1N/setup-poetry@v9
-      - uses: actions/cache@v4
-        with:
-            path: ~/.cache/pypoetry/virtualenvs
-            key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-      - run: poetry --version
-      - run: poetry install
+      # Install dependencies using UV
+      - name: Install UV
+        id: uv
+        run: |
+          curl -LsSf "https://astral.sh/uv/${{ env.UV_VERSION }}/install.sh" | sh
 
       # Build documentation to ./site/ directory
       - name: Build Documentation
         id: build
-        run: poetry run mkdocs build
+        run: uv run mkdocs build
 
       # Upload artifact from the ./site/ directory using the expected format for GitHub Pages
       - name: Upload Artifact
