--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,4 +74,5 @@ dev = [
     "mkdocs-material<10.0.0,>=9.5.49",
     "mkdocs-literate-nav<1.0.0,>=0.6.1",
     "mkdocs-section-index<1.0.0,>=0.3.9",
+    "pandas-stubs>=2.2.2.240807",
 ]
