--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "pytest>=7.0",
     "jsonpickle>=1.0",
     "typer",
+    "typing-extensions ; python_full_version == '3.9.*'",
 ]
 name = "snappylapy"
 version = "0.3.2"
