Prepare for release of 0.5 and update documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "typing-extensions ; python_full_version == '3.9.*'",
 ]
 name = "snappylapy"
-version = "0.4.0"
+version = "0.5.0"
 description = "A snapshot library for python optimized for easy of use, human readable snapshots and enabling decoupling of chained integration tests."
 readme = "README.md"
 classifiers = [
@@ -83,4 +83,5 @@ dev = [
     "mkdocs-literate-nav<1.0.0,>=0.6.1",
     "mkdocs-section-index<1.0.0,>=0.3.9",
     "pandas-stubs>=2.2.2.240807",
+    "toolit>=0.2.0",
 ]
