Fix CI pipeline such that it discovers build issues in the future

--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -9,7 +9,7 @@ on:
       - '**/*.md'
 
 env:
-  UV_VERSION: 0.7.12
+  UV_VERSION: 0.8.4
 
 jobs:
     lint_and_type_check:
@@ -56,13 +56,14 @@ jobs:
         - name: Pin python version
           run: uv python pin ${{ matrix.python-version }}
 
-        - name: Install dependencies
+        - name: Build and install package
           run: |
-            if [ "${{ matrix.include-extras }}" = "true" ]; then
-              uv sync --all-extras
-            else
-              uv sync
-            fi
+            uv build
+            uv pip install snappylapy@dist/snappylapy-0.5.0.tar.gz
+
+        # Remove the snappylapy folder to ensure the installed package is used for the test
+        - name: Remove snappylapy folder in the cloned repository
+          run: rm -rf snappylapy
 
         - name: Run tests
           run: uv run pytest tests/ --junit-xml=test-results.xml
