Enhance snapshot comparison logic with Levenshtein distance; add method for comparing snapshot data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "jsonpickle>=1.0",
     "typer",
     "typing-extensions ; python_full_version == '3.9.*'",
+    "levenshtein>=0.27.1",
 ]
 
 [project.urls]
