--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -39,10 +39,10 @@ jobs:
         strategy:
           fail-fast: false
           matrix:
-            python-version: [3.10, 3.14]
+            python-version: ["3.10", "3.14"]
             include-extras: [true]
             include:
-              - python-version: 3.10
+              - python-version: "3.10"
                 include-extras: false
 
         steps:
